# block-builder

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.example.json
.claude/hooks/: pre_tool_use_policy.py
.claude/output-styles/: Bare Engineering.md
.codex/: config.toml  hooks.json
.codex/hooks/: permission_request_policy.py  policy_lib.py  pre_tool_use_policy.py
.cursor/rules/: agentic-development.mdc
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml
backend/app/: main.py  middleware.py  schemas.py  settings.py
docs/: glossary.md  project-charter.md  repo-map.md  roadmap.md
docs/adr/: ADR-0000-architecture-direction.md  _template.md
docs/change-requests/: CR-0001-env-example-hook-conflict.md  CR-0002-a2-ux-mechanics-revision.md  CR-0003-direction-mechanic-and-level-redesign.md  CR-0004-level-1-support-geometry-fix.md  CR-0005-solution-evidence-capture.md  CR-0006-stack-stability-and-level-resource-validation.md  CR-0007-deterministic-solver-and-design-analyzer.md  CR-0008-level-13-solver-deficit-redesign.md  CR-0009-physics-certified-macro-solver.md  (+3 more)
frontend/: index.html  style.css
shared/: COMMUNICATION_CONTRACT.md  app_contract.json
tests/: test_api.py  test_change_control_policy.py  test_level_validation.py  test_static_export.py
tools/: export_static_site.py  solve-levels.mjs  validate_levels.py
(+114 files in other folders)
