[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "block-builder"
version = "0.1.0"
description = "Local Block Builder puzzle prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.3",
  "pydantic==2.13.4",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
